--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3.6"
 services:
+  mygoservice:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: go-monitoring/latest
+    ports:
+    - 8000:8000
   telegraf:
     image: telegraf
     configs:
