--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -13,14 +13,17 @@
   hostname = "$HOSTNAME"
   omit_hostname = false
 
-[[outputs.influxdb]]
+[[outputs.influxdb_v2]]
   urls = ["http://influxdb:8086"]
-  database = "metrics"
-  username = ""
-  password = ""
-  retention_policy = ""
-  write_consistency = "any"
-  timeout = "5s"
+
+  ## API token for authentication.
+  token = "$INFLUX_TOKEN"
+
+  ## Organization is the name of the organization you wish to write to; must exist.
+  organization = "go-monitoring"
+
+  ## Destination bucket to write into.
+  bucket = "metrics"
 
 [[inputs.http_listener]]
   service_address = ":8186"
