Add statsd client to send metrics to telegraf

--- a/docker-compose-prometheus.yml
+++ b/docker-compose-prometheus.yml
@@ -4,8 +4,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: go-monitoring/latest
+    image: go-monitoring:latest
     container_name: mygoservice
+    environment:
+      OBSERVABILITY_STACK: "prometheus"
     ports:
     - 8000:8000
   prometheus:
