--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -25,8 +25,20 @@
   ## Destination bucket to write into.
   bucket = "metrics"
 
-[[inputs.http_listener]]
-  service_address = ":8186"
+[[inputs.statsd]]
+  protocol = "udp"
+  max_tcp_connections = 250
+  tcp_keep_alive = false
+  service_address = ":8125"
+  delete_gauges = false
+  delete_counters = false
+  delete_sets = false
+  delete_timings = false
+  percentiles = [50.0, 90.0, 99.0, 99.9, 99.95, 100.0]
+  metric_separator = "_"
+  parse_data_dog_tags = false
+  datadog_extensions = false
+  datadog_distributions = false
 
 [cpu]
   # Whether to report per-cpu stats or not
