--- a/docker-compose-tick.yml
+++ b/docker-compose-tick.yml
@@ -31,7 +31,7 @@ services:
     container_name: chronograf
     ports:
     - 8888:8888
-    command: ["chronograf", "--influxdb-url=http://influxdb:8086"]
+    command: ["chronograf", "--influxdb-url=http://influxdb:8086", "--kapacitor-url=http://kapacitor:9092"]
   kapacitor:
     image: kapacitor
     container_name: kapacitor
