--- a/docker-compose-tick.yml
+++ b/docker-compose-tick.yml
@@ -26,6 +26,13 @@ services:
     container_name: influxdb
     ports:
     - 8086:8086
+    environment:
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: admin
+      DOCKER_INFLUXDB_INIT_PASSWORD: admin123
+      DOCKER_INFLUXDB_INIT_ORG: go-monitoring
+      DOCKER_INFLUXDB_INIT_BUCKET: metrics
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUX_TOKEN}
   chronograf:
     image: chronograf
     container_name: chronograf
